Fixing errors at the Checkout and the Customerinf and Login and Sort Classes